--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,17 +40,20 @@ input[type=text] {
       border-radius: 5px;
 }
 
-#videos {
-	display: none; border: 1px solid blue; width: 100%; height: 100%; position: absolute; left: 0; right: 0; top: 0; bottom: 0;
-}
-
 #home {
 	z-index: 1000; position: absolute; left: 20px; top: 20px; font-size: 30px; cursor: pointer;
 }
 
+#videos {
+	display: none; width: 100%; height: 100%; position: absolute; left: 0; right: 0; top: 0; bottom: 0;
+	padding: 0px; text-align: center;
+}
+
 .video-frame {
-	width: 400px; height: 250px; border: 1px solid red; display: inline-block; background: #000; position: relative;
-	vertical-align: top;
+	width: 400px; height: 300px; display: inline-block; background: #000; position: relative;
+	vertical-align: middle;
+	overflow: hidden;
+	text-align: left;
 }
 
 .video-frame h4 {
@@ -58,12 +61,42 @@ input[type=text] {
 	left: 5px;
 	top: 5px;
 	text-shadow: #fff 2px 2px 5px;
+	z-index: 100;
+	display: none;
 }
 
 .video-frame video {
-	width: 100%;
+	height: 100%; background: url('../img/noise.gif');
+	margin-left: auto;
+    margin-right: auto;
+    display: block;
+
+	position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+
+}
+.video-frame video.connected {
+	background: #000;
 }
 
+#mirror {
+	width: 400px; height: 300px; background: url('../img/noise.gif');
+}
+
+.one-user { width: 99%; height: 100%; }
+.two-users { width: 49%; height: 100%; }
+.four-users { width: 49%; height: 49%; }
+.six-users { width: 32%; height: 49%; }
+.eight-users { width: 24%; height: 49%; }
+.nine-users { width: 32%; height: 32%; }
+.twelve-users { width: 24%; height: 32%; }
+
+.two-users-mobile { width: 99%; height: 49%; }
+.six-users-mobile { width: 49%; height: 32%; }
+.eight-users-mobile { width: 49%; height: 24%; }
+.twelve-users-mobile { width: 32%; height: 24%; }
 
 
 
