--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,27 +1,30 @@
 * {margin: 0; padding: 0;}
 
 body {
-	background: #000;
 	background-image: url('/img/bar.jpg');
-	background-repeat: no-repeat;
+  	background-position: center center;
+  	background-repeat: no-repeat;
+  	background-attachment: fixed;
   	background-size: cover;
+  	background-color: #000;
 
   	font-family: 'Baloo 2', sans-serif;
   	font-size: 18px;
 }
 
-
-@media screen and (max-width: 1024px) {
-
-}
-
 button {
-	margin-top: 15px; font-size: 18px; background: #444; color: #fff; border: none; border-radius: 5px; padding: 10px 20px;
+	margin-top: 25px; 
+	margin-bottom: 25px;
+	font-size: 18px; background: #444; color: #fff; border: none; border-radius: 5px; padding: 15px 25px;
 	background-image: url('/img/beer.jpg');
 	background-repeat: no-repeat;
   	background-size: cover;
   	font-family: 'Baloo 2', sans-serif;
   	font-weight: bold;
+  	text-shadow: 2px 2px 5px #000;
+  	box-shadow: 0px 2px 7px #555;
+  	cursor: pointer;
+  	min-width: 150px;
 
 }
 button:disabled {
@@ -33,11 +36,30 @@ input[type=text] {
 	font-size: 16px;
 	min-width: 200px;
 	font-family: 'Baloo 2', sans-serif;
+	border: none;
+	border-radius: 5px;
+	width: calc(100% - 40px);
 }
 
 .main-box {
-	padding: 15px; line-height: 1.4; margin: auto; margin-top: 100px; width: 400px; background: rgba(255,255,255,0.6); text-align: center;
+	padding: 15px; line-height: 1.4; margin: auto; margin-top: 100px; width: 400px; 
+	background: rgba(255,255,255,0.7); text-align: center;
       border-radius: 5px;
+}
+@media screen and (max-width: 1024px) {
+	.main-box {
+		width: calc(100% - 60px);
+	}
+}
+
+#mirror {
+	width: 400px; height: 300px; background: url('../img/noise.gif');
+}
+@media screen and (max-width: 1024px) {
+	#mirror {
+		width: calc(100% - 0px);
+		height: auto;
+	}
 }
 
 #home {
@@ -79,10 +101,6 @@ input[type=text] {
 }
 .video-frame video.connected {
 	background: #000;
-}
-
-#mirror {
-	width: 400px; height: 300px; background: url('../img/noise.gif');
 }
 
 .one-user { width: 99%; height: 100%; }
